minor bugs in feature engineering

--- a/05_feature_engineering/07_line.ipynb
+++ b/05_feature_engineering/07_line.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T06:10:49.281690Z",
-     "start_time": "2019-01-27T06:10:43.199183Z"
+     "end_time": "2019-01-27T07:01:39.284173Z",
+     "start_time": "2019-01-27T07:01:29.345359Z"
     }
    },
    "outputs": [
@@ -49,8 +49,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T06:10:49.296576Z",
-     "start_time": "2019-01-27T06:10:49.287494Z"
+     "end_time": "2019-01-27T07:01:39.298518Z",
+     "start_time": "2019-01-27T07:01:39.290536Z"
     }
    },
    "outputs": [],
@@ -66,8 +66,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T06:10:49.751812Z",
-     "start_time": "2019-01-27T06:10:49.303253Z"
+     "end_time": "2019-01-27T07:01:39.904193Z",
+     "start_time": "2019-01-27T07:01:39.306179Z"
     }
    },
    "outputs": [],
@@ -87,20 +87,21 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T06:10:50.225340Z",
-     "start_time": "2019-01-27T06:10:49.757240Z"
+     "end_time": "2019-01-27T07:01:40.579930Z",
+     "start_time": "2019-01-27T07:01:39.909657Z"
     }
    },
    "outputs": [],
    "source": [
     "for c in ['open','pfr','close']:\n",
     "    src_col = col('{}_fav'.format(c))\n",
+    "    line_col = col('{}_spread'.format(c))\n",
     "    out_col = 'h_{}_line'.format(c)\n",
     "    line = line.withColumn(\n",
     "        out_col,\n",
     "        F.when(\n",
-    "            src_col == 'H', F.lit(-1)*src_col\n",
-    "        ).otherwise(src_col)\n",
+    "            src_col == 'H', F.lit(-1)*line_col\n",
+    "        ).otherwise(line_col)\n",
     "    )\n",
     "    features_list.append(out_col)"
    ]
@@ -117,8 +118,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T06:10:50.236506Z",
-     "start_time": "2019-01-27T06:10:50.230435Z"
+     "end_time": "2019-01-27T07:01:40.595124Z",
+     "start_time": "2019-01-27T07:01:40.586016Z"
     }
    },
    "outputs": [
@@ -146,8 +147,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T06:10:52.418859Z",
-     "start_time": "2019-01-27T06:10:50.241373Z"
+     "end_time": "2019-01-27T07:01:44.779508Z",
+     "start_time": "2019-01-27T07:01:40.602274Z"
     }
    },
    "outputs": [],
