more feature engineering

--- a/05_feature_engineering/00_plan_and_ideas.ipynb
+++ b/05_feature_engineering/00_plan_and_ideas.ipynb
@@ -104,6 +104,8 @@
     "   * rushing\n",
     " * Defense\n",
     " * Special Teams\n",
+    "* &#x2714; DVOA rankings\n",
+    "* &#x2714; Estimated winrate (from DVOA rankings)\n",
     "* &#x23F8; DVOA rankings comparisons between 2 teams\n",
     "\n",
     "### Stats\n",
@@ -242,7 +244,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
