--- a/05_feature_engineering/08_rankings.ipynb
+++ b/05_feature_engineering/08_rankings.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:40.534337Z",
-     "start_time": "2019-02-28T22:54:35.078907Z"
+     "end_time": "2019-02-28T23:42:30.157509Z",
+     "start_time": "2019-02-28T23:42:24.611694Z"
     }
    },
    "outputs": [
@@ -33,7 +33,25 @@
    "source": [
     "## Team Rank Features\n",
     "* key: (game_id, team_id)\n",
-    "* table name: features.rankings"
+    "* table name: features.rankings\n",
+    "* __h__dave_or_wtddvoa__\n",
+    "* __h__def_rank__\n",
+    "* __h__defensedvoa__\n",
+    "* __h__estim_winrate__\n",
+    "* __h__off_rank__\n",
+    "* __h__offensedvoa__\n",
+    "* __h__s_t_dvoa__\n",
+    "* __h__s_t_rank__\n",
+    "* __h__totaldvoa__\n",
+    "* __v__dave_or_wtddvoa__\n",
+    "* __v__def_rank__\n",
+    "* __v__defensedvoa__\n",
+    "* __v__estim_winrate__\n",
+    "* __v__off_rank__\n",
+    "* __v__offensedvoa__\n",
+    "* __v__s_t_dvoa__\n",
+    "* __v__s_t_rank__\n",
+    "* __v__totaldvoa__"
    ]
   },
   {
@@ -41,13 +59,13 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:40.544247Z",
-     "start_time": "2019-02-28T22:54:40.538779Z"
+     "end_time": "2019-02-28T23:42:30.167289Z",
+     "start_time": "2019-02-28T23:42:30.161938Z"
     }
    },
    "outputs": [],
    "source": [
-    "key = ('game_id','team_id')\n",
+    "key = 'game_id'\n",
     "out_tbl = 'features.rankings'\n",
     "features_list = []"
    ]
@@ -57,8 +75,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:41.036035Z",
-     "start_time": "2019-02-28T22:54:40.549686Z"
+     "end_time": "2019-02-28T23:42:30.643480Z",
+     "start_time": "2019-02-28T23:42:30.173939Z"
     }
    },
    "outputs": [],
@@ -91,8 +109,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:42.624182Z",
-     "start_time": "2019-02-28T22:54:41.040491Z"
+     "end_time": "2019-02-28T23:42:32.820422Z",
+     "start_time": "2019-02-28T23:42:30.648979Z"
     }
    },
    "outputs": [
@@ -120,8 +138,6 @@
        "      <th>team_id</th>\n",
        "      <th>season</th>\n",
        "      <th>week_id</th>\n",
-       "      <th>w_l</th>\n",
-       "      <th>estim_wins</th>\n",
        "      <th>dave_or_wtddvoa</th>\n",
        "      <th>totaldvoa</th>\n",
        "      <th>offensedvoa</th>\n",
@@ -130,6 +146,7 @@
        "      <th>def_rank</th>\n",
        "      <th>s_t_dvoa</th>\n",
        "      <th>s_t_rank</th>\n",
+       "      <th>estim_winrate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -138,8 +155,6 @@
        "      <td>mia</td>\n",
        "      <td>2008</td>\n",
        "      <td>8</td>\n",
-       "      <td>2-4</td>\n",
-       "      <td>3.7</td>\n",
        "      <td>6.9</td>\n",
        "      <td>9.8</td>\n",
        "      <td>22.2</td>\n",
@@ -148,14 +163,13 @@
        "      <td>16.0</td>\n",
        "      <td>-10.0</td>\n",
        "      <td>31.0</td>\n",
+       "      <td>0.616667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>mia</td>\n",
        "      <td>2008</td>\n",
        "      <td>9</td>\n",
-       "      <td>3-4</td>\n",
-       "      <td>4.7</td>\n",
        "      <td>13.6</td>\n",
        "      <td>13.3</td>\n",
        "      <td>20.8</td>\n",
@@ -164,14 +178,13 @@
        "      <td>12.0</td>\n",
        "      <td>-8.9</td>\n",
        "      <td>31.0</td>\n",
+       "      <td>0.671429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>mia</td>\n",
        "      <td>2008</td>\n",
        "      <td>10</td>\n",
-       "      <td>4-4</td>\n",
-       "      <td>5.0</td>\n",
        "      <td>10.6</td>\n",
        "      <td>9.4</td>\n",
        "      <td>14.9</td>\n",
@@ -180,14 +193,13 @@
        "      <td>11.0</td>\n",
        "      <td>-8.5</td>\n",
        "      <td>31.0</td>\n",
+       "      <td>0.625000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>mia</td>\n",
        "      <td>2008</td>\n",
        "      <td>11</td>\n",
-       "      <td>5-4</td>\n",
-       "      <td>4.9</td>\n",
        "      <td>10.1</td>\n",
        "      <td>7.7</td>\n",
        "      <td>15.3</td>\n",
@@ -196,14 +208,13 @@
        "      <td>13.0</td>\n",
        "      <td>-8.2</td>\n",
        "      <td>31.0</td>\n",
+       "      <td>0.544444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>mia</td>\n",
        "      <td>2008</td>\n",
        "      <td>12</td>\n",
-       "      <td>6-4</td>\n",
-       "      <td>5.4</td>\n",
        "      <td>6.6</td>\n",
        "      <td>6.8</td>\n",
        "      <td>16.7</td>\n",
@@ -212,25 +223,26 @@
        "      <td>13.0</td>\n",
        "      <td>-9.4</td>\n",
        "      <td>31.0</td>\n",
+       "      <td>0.540000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  team_id  season  week_id  w_l  estim_wins  dave_or_wtddvoa  totaldvoa  \\\n",
-       "0     mia    2008        8  2-4         3.7              6.9        9.8   \n",
-       "1     mia    2008        9  3-4         4.7             13.6       13.3   \n",
-       "2     mia    2008       10  4-4         5.0             10.6        9.4   \n",
-       "3     mia    2008       11  5-4         4.9             10.1        7.7   \n",
-       "4     mia    2008       12  6-4         5.4              6.6        6.8   \n",
+       "  team_id  season  week_id  dave_or_wtddvoa  totaldvoa  offensedvoa  off_rank  \\\n",
+       "0     mia    2008        8              6.9        9.8         22.2       3.0   \n",
+       "1     mia    2008        9             13.6       13.3         20.8       2.0   \n",
+       "2     mia    2008       10             10.6        9.4         14.9       8.0   \n",
+       "3     mia    2008       11             10.1        7.7         15.3       9.0   \n",
+       "4     mia    2008       12              6.6        6.8         16.7       6.0   \n",
        "\n",
-       "   offensedvoa  off_rank  defensedvoa  def_rank  s_t_dvoa  s_t_rank  \n",
-       "0         22.2       3.0          2.3      16.0     -10.0      31.0  \n",
-       "1         20.8       2.0         -1.4      12.0      -8.9      31.0  \n",
-       "2         14.9       8.0         -3.0      11.0      -8.5      31.0  \n",
-       "3         15.3       9.0         -0.5      13.0      -8.2      31.0  \n",
-       "4         16.7       6.0          0.5      13.0      -9.4      31.0  "
+       "   defensedvoa  def_rank  s_t_dvoa  s_t_rank  estim_winrate  \n",
+       "0          2.3      16.0     -10.0      31.0       0.616667  \n",
+       "1         -1.4      12.0      -8.9      31.0       0.671429  \n",
+       "2         -3.0      11.0      -8.5      31.0       0.625000  \n",
+       "3         -0.5      13.0      -8.2      31.0       0.544444  \n",
+       "4          0.5      13.0      -9.4      31.0       0.540000  "
       ]
      },
      "execution_count": 4,
@@ -246,10 +258,10 @@
     ").withColumn(\n",
     "    'estim_winrate', col('estim_wins') / col('ngames')\n",
     ").drop(\n",
-    "    'w-l', 'estim_wins', 'ngames'\n",
+    "    'w_l', 'estim_wins', 'ngames'\n",
     ")\n",
     "\n",
-    "dvoa.limit(5).toPandas()"
+    "dvoa_features.limit(5).toPandas()"
    ]
   },
   {
@@ -265,8 +277,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:42.760596Z",
-     "start_time": "2019-02-28T22:54:42.628568Z"
+     "end_time": "2019-02-28T23:42:32.957482Z",
+     "start_time": "2019-02-28T23:42:32.825767Z"
     }
    },
    "outputs": [],
@@ -274,13 +286,13 @@
     "base = set(['team_id','season','week_id'])\n",
     "dvoa_home = reduce(\n",
     "    lambda df, c: df.withColumnRenamed(c, 'h__{}'.format(c)),\n",
-    "    set(dvoa.columns) - base,\n",
-    "    dvoa\n",
+    "    set(dvoa_features.columns) - base,\n",
+    "    dvoa_features\n",
     ")\n",
     "dvoa_visitor = reduce(\n",
     "    lambda df, c: df.withColumnRenamed(c, 'v__{}'.format(c)),\n",
-    "    set(dvoa.columns) - base,\n",
-    "    dvoa\n",
+    "    set(dvoa_features.columns) - base,\n",
+    "    dvoa_features\n",
     ")\n",
     "\n",
     "features_list += list((set(dvoa_home.columns)\n",
@@ -296,19 +308,48 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:43.792414Z",
-     "start_time": "2019-02-28T22:54:42.766090Z"
+     "end_time": "2019-02-28T23:42:34.224379Z",
+     "start_time": "2019-02-28T23:42:32.963206Z"
     }
    },
    "outputs": [],
    "source": [
-    "game_features = game.join(\n",
+    "rankings_features = game.join(\n",
     "    dvoa_home, on=['season','week_id','h_team_id']\n",
     ").join(\n",
     "    dvoa_visitor, on=['season','week_id','v_team_id']\n",
     ")\n",
     "\n",
-    "assert game_features.count() == game.count()"
+    "assert rankings_features.count() == game.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fill NULLs\n",
+    "* fill in with the mean value\n",
+    "* __TODO__: come up with something better/more appropriate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-28T23:42:40.966205Z",
+     "start_time": "2019-02-28T23:42:34.229995Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for f in features_list:\n",
+    "    mean_value = rankings_features.fillna(-99999, f)\\\n",
+    "                    .filter(col(f) != -99999)\\\n",
+    "                    .select(F.mean(f)).toPandas()\\\n",
+    "                    .iloc[0, 0]   \n",
+    "    rankings_features = rankings_features.fillna(mean_value, f)"
    ]
   },
   {
@@ -320,11 +361,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:43.805390Z",
-     "start_time": "2019-02-28T22:54:43.798143Z"
+     "end_time": "2019-02-28T23:42:40.975847Z",
+     "start_time": "2019-02-28T23:42:40.970794Z"
     }
    },
    "outputs": [
@@ -332,57 +373,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* __v__def_rank__\n",
-      "* __h__def_rank__\n",
-      "* __v__s_t_dvoa__\n",
-      "* __h__s_t_dvoa__\n",
-      "* __v__offensedvoa__\n",
-      "* __v__estim_wins__\n",
-      "* __v__dave_or_wtddvoa__\n",
-      "* __h__off_rank__\n",
-      "* __h__defensedvoa__\n",
-      "* __h__estim_wins__\n",
-      "* __h__s_t_rank__\n",
-      "* __v__s_t_rank__\n",
-      "* __h__offensedvoa__\n",
       "* __h__dave_or_wtddvoa__\n",
+      "* __h__def_rank__\n",
+      "* __h__defensedvoa__\n",
+      "* __h__estim_winrate__\n",
+      "* __h__off_rank__\n",
+      "* __h__offensedvoa__\n",
+      "* __h__s_t_dvoa__\n",
+      "* __h__s_t_rank__\n",
+      "* __h__totaldvoa__\n",
+      "* __v__dave_or_wtddvoa__\n",
+      "* __v__def_rank__\n",
       "* __v__defensedvoa__\n",
-      "* __v__totaldvoa__\n",
+      "* __v__estim_winrate__\n",
       "* __v__off_rank__\n",
-      "* __v__w_l__\n",
-      "* __h__w_l__\n",
-      "* __h__totaldvoa__\n"
+      "* __v__offensedvoa__\n",
+      "* __v__s_t_dvoa__\n",
+      "* __v__s_t_rank__\n",
+      "* __v__totaldvoa__\n"
      ]
     }
    ],
    "source": [
-    "print '* __' + '__\\n* __'.join(features_list) + '__'"
+    "print '* __' + '__\\n* __'.join(sorted(features_list)) + '__'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T22:54:44.219099Z",
-     "start_time": "2019-02-28T22:54:43.811762Z"
+     "end_time": "2019-02-28T23:42:42.624806Z",
+     "start_time": "2019-02-28T23:42:40.981625Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'line' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-46fdbe03f6c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfeatures_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m              \u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'overwrite'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaveAsTable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_tbl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'line' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rankings_faetures.select(*([key] + features_list))\\\n",
+    "rankings_features.select(*([key] + features_list))\\\n",
     "              .write.mode('overwrite').saveAsTable(out_tbl)"
    ]
   }
