Refactored cv data, train, and score

--- a/04_model_pipeline_dev/dev_train_score_evaluate_pipeline.ipynb
+++ b/04_model_pipeline_dev/dev_train_score_evaluate_pipeline.ipynb
@@ -56,26 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T07:24:58.851840Z",
-     "start_time": "2019-01-27T07:24:52.311921Z"
+     "end_time": "2019-05-29T02:37:20.559266Z",
+     "start_time": "2019-05-29T02:37:20.122604Z"
     },
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>.container {width:90% !important;}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:File `'../config/initialize.ipynb.py'` not found.\n"
+     ]
     },
     {
      "data": {
@@ -83,7 +78,37 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +116,7 @@
    "source": [
     "%run ../config/initialize.ipynb\n",
     "\n",
-    "import cPickle as pickle\n",
+    "import pickle as pickle\n",
     "import json\n",
     "\n",
     "from pyspark.sql import Window\n",
@@ -104,14 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-27T07:24:58.862127Z",
-     "start_time": "2019-01-27T07:24:58.857526Z"
+     "end_time": "2019-05-29T02:37:06.579561Z",
+     "start_time": "2019-05-29T02:37:06.572276Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rcParams' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-3cee87724546>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrcParams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'figure.dpi'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m96\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrcParams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'figure.figsize'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rcParams' is not defined"
+     ]
+    }
+   ],
    "source": [
     "rcParams['figure.dpi'] = 96\n",
     "rcParams['figure.figsize'] = (12,8)"
@@ -369,14 +406,13 @@
     "                    set_data['train']['label'].ravel()\n",
     "                )\n",
     "    return training_scoring_dict\n",
-    "    \n",
+    "\n",
     "def cv_score(model_dict, training_scoring_dict):\n",
     "    '''takes the model dict and another dict:\n",
     "    keys are datasets (fold number or \"full\"),\n",
     "    values dict with values of\n",
     "    (training_df, scoring_only, fitted model obj).\n",
     "    return pandas DF of scores'''\n",
-    "    \n",
     "    feats = sorted(model_dict['features_list'])\n",
     "    for i, (set_nbr, mdl) in enumerate(training_scoring_dict.iteritems()):\n",
     "        curr_scoring = mdl['score']\n",
@@ -1711,21 +1747,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -1740,7 +1776,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "305.438px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
