--- a/05_feature_engineering/combine_features.ipynb
+++ b/05_feature_engineering/combine_features.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:42:58.133092Z",
-     "start_time": "2019-02-28T23:42:53.125892Z"
+     "end_time": "2019-05-30T02:07:58.764167Z",
+     "start_time": "2019-05-30T02:07:52.724036Z"
     }
    },
    "outputs": [
@@ -32,8 +32,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:42:58.143210Z",
-     "start_time": "2019-02-28T23:42:58.137544Z"
+     "end_time": "2019-05-30T02:07:58.769858Z",
+     "start_time": "2019-05-30T02:07:58.766673Z"
     }
    },
    "outputs": [],
@@ -52,14 +52,14 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:42:58.155035Z",
-     "start_time": "2019-02-28T23:42:58.149257Z"
+     "end_time": "2019-05-30T02:07:58.777167Z",
+     "start_time": "2019-05-30T02:07:58.773548Z"
     }
    },
    "outputs": [],
    "source": [
-    "out_tbl_game = 'features.combined_0127'\n",
-    "out_tbl_labels = 'labels.combined_0127'"
+    "out_tbl_game = 'features.combined_0320'\n",
+    "out_tbl_labels = 'labels.combined_0320'"
    ]
   },
   {
@@ -67,8 +67,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:42:58.166151Z",
-     "start_time": "2019-02-28T23:42:58.161044Z"
+     "end_time": "2019-05-30T02:07:58.783645Z",
+     "start_time": "2019-05-30T02:07:58.780206Z"
     }
    },
    "outputs": [],
@@ -81,8 +81,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:42:58.179526Z",
-     "start_time": "2019-02-28T23:42:58.171761Z"
+     "end_time": "2019-05-30T02:07:58.789037Z",
+     "start_time": "2019-05-30T02:07:58.785875Z"
     }
    },
    "outputs": [],
@@ -102,8 +102,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:43:06.618255Z",
-     "start_time": "2019-02-28T23:42:58.184389Z"
+     "end_time": "2019-05-30T02:08:07.853039Z",
+     "start_time": "2019-05-30T02:07:58.791902Z"
     }
    },
    "outputs": [],
@@ -125,8 +125,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:43:08.244707Z",
-     "start_time": "2019-02-28T23:43:06.622717Z"
+     "end_time": "2019-05-30T02:08:09.568402Z",
+     "start_time": "2019-05-30T02:08:07.855016Z"
     },
     "scrolled": true
    },
@@ -1575,137 +1575,15 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:43:08.264632Z",
-     "start_time": "2019-02-28T23:43:08.249655Z"
+     "end_time": "2019-05-30T02:08:09.574621Z",
+     "start_time": "2019-05-30T02:08:09.570735Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['time_date___game_time_eastern',\n",
-       " 'time_date___game_time_local',\n",
-       " 'time_date___day_of_week',\n",
-       " 'time_date___is_sunday',\n",
-       " 'time_date___week_id',\n",
-       " 'time_date___is_playoffs',\n",
-       " 'time_date___is_superbowl',\n",
-       " 'home_field___h_is_home',\n",
-       " 'home_field___v_is_home',\n",
-       " 'home_field___h_consecutive_home',\n",
-       " 'home_field___v_consecutive_visitor',\n",
-       " 'home_field___v_visitor__ovr_wr_ytd',\n",
-       " 'home_field___v_visitor__open_wr_ytd',\n",
-       " 'home_field___v_visitor__close_wr_ytd',\n",
-       " 'home_field___v_visitor__pfr_wr_ytd',\n",
-       " 'home_field___h_home__ovr_wr_ytd',\n",
-       " 'home_field___h_home__open_wr_ytd',\n",
-       " 'home_field___h_home__close_wr_ytd',\n",
-       " 'home_field___h_home__pfr_wr_ytd',\n",
-       " 'home_field___v_visitor__ovr_wr_last_4_games',\n",
-       " 'home_field___v_visitor__ovr_wr_last_8_games',\n",
-       " 'home_field___v_visitor__open_wr_last_4_games',\n",
-       " 'home_field___v_visitor__open_wr_last_8_games',\n",
-       " 'home_field___v_visitor__close_wr_last_4_games',\n",
-       " 'home_field___v_visitor__close_wr_last_8_games',\n",
-       " 'home_field___v_visitor__pfr_wr_last_4_games',\n",
-       " 'home_field___v_visitor__pfr_wr_last_8_games',\n",
-       " 'home_field___h_home__ovr_wr_last_4_games',\n",
-       " 'home_field___h_home__ovr_wr_last_8_games',\n",
-       " 'home_field___h_home__open_wr_last_4_games',\n",
-       " 'home_field___h_home__open_wr_last_8_games',\n",
-       " 'home_field___h_home__close_wr_last_4_games',\n",
-       " 'home_field___h_home__close_wr_last_8_games',\n",
-       " 'home_field___h_home__pfr_wr_last_4_games',\n",
-       " 'home_field___h_home__pfr_wr_last_8_games',\n",
-       " 'travel___v_dist_from_home',\n",
-       " 'travel___v_home_body_time',\n",
-       " 'travel___h_days_since_last_game',\n",
-       " 'travel___h_tz_change_last_game',\n",
-       " 'travel___h_tz_change_last_10_days',\n",
-       " 'travel___h_travel_from_last_game',\n",
-       " 'travel___h_travel_from_last_10_days',\n",
-       " 'travel___h_travel_from_last_game_decay',\n",
-       " 'travel___h_same_stadium_last_game',\n",
-       " 'travel___h_body_clock_from_last_wk',\n",
-       " 'travel___v_days_since_last_game',\n",
-       " 'travel___v_tz_change_last_game',\n",
-       " 'travel___v_tz_change_last_10_days',\n",
-       " 'travel___v_travel_from_last_game',\n",
-       " 'travel___v_travel_from_last_10_days',\n",
-       " 'travel___v_travel_from_last_game_decay',\n",
-       " 'travel___v_same_stadium_last_game',\n",
-       " 'travel___v_body_clock_from_last_wk',\n",
-       " 'weather___wind_chill',\n",
-       " 'weather___humidity_pct',\n",
-       " 'weather___temperature',\n",
-       " 'weather___wind_mph',\n",
-       " 'weather___is_grass',\n",
-       " 'weather___is_dome',\n",
-       " 'matchup___is_same_division',\n",
-       " 'matchup___is_same_conf',\n",
-       " 'matchup___h_wr_past_5_games',\n",
-       " 'matchup___h_wr_ytd',\n",
-       " 'matchup___h_wr_past_2_seasons',\n",
-       " 'matchup___h_wr_past_3_seasons',\n",
-       " 'line___h_ml',\n",
-       " 'line___v_ml',\n",
-       " 'line___open_ou',\n",
-       " 'line___pfr_ou',\n",
-       " 'line___close_ou',\n",
-       " 'line___h_open_line',\n",
-       " 'line___h_pfr_line',\n",
-       " 'line___h_close_line',\n",
-       " 'team_history___h_open_wr_past_5_games',\n",
-       " 'team_history___h_close_wr_past_5_games',\n",
-       " 'team_history___h_pfr_wr_past_5_games',\n",
-       " 'team_history___h_ovr_wr_past_5_games',\n",
-       " 'team_history___h_open_wr_ytd',\n",
-       " 'team_history___h_close_wr_ytd',\n",
-       " 'team_history___h_pfr_wr_ytd',\n",
-       " 'team_history___h_ovr_wr_ytd',\n",
-       " 'team_history___h_open_wr_past_2_seasons',\n",
-       " 'team_history___h_close_wr_past_2_seasons',\n",
-       " 'team_history___h_pfr_wr_past_2_seasons',\n",
-       " 'team_history___h_ovr_wr_past_2_seasons',\n",
-       " 'team_history___h_open_wr_past_3_seasons',\n",
-       " 'team_history___h_close_wr_past_3_seasons',\n",
-       " 'team_history___h_pfr_wr_past_3_seasons',\n",
-       " 'team_history___h_ovr_wr_past_3_seasons',\n",
-       " 'team_history___v_open_wr_past_5_games',\n",
-       " 'team_history___v_close_wr_past_5_games',\n",
-       " 'team_history___v_pfr_wr_past_5_games',\n",
-       " 'team_history___v_ovr_wr_past_5_games',\n",
-       " 'team_history___v_open_wr_ytd',\n",
-       " 'team_history___v_close_wr_ytd',\n",
-       " 'team_history___v_pfr_wr_ytd',\n",
-       " 'team_history___v_ovr_wr_ytd',\n",
-       " 'team_history___v_open_wr_past_2_seasons',\n",
-       " 'team_history___v_close_wr_past_2_seasons',\n",
-       " 'team_history___v_pfr_wr_past_2_seasons',\n",
-       " 'team_history___v_ovr_wr_past_2_seasons',\n",
-       " 'team_history___v_open_wr_past_3_seasons',\n",
-       " 'team_history___v_close_wr_past_3_seasons',\n",
-       " 'team_history___v_pfr_wr_past_3_seasons',\n",
-       " 'team_history___v_ovr_wr_past_3_seasons',\n",
-       " 'rankings___v__def_rank',\n",
-       " 'rankings___h__def_rank',\n",
-       " 'rankings___v__s_t_dvoa',\n",
-       " 'rankings___h__s_t_dvoa',\n",
-       " 'rankings___v__offensedvoa',\n",
-       " 'rankings___v__dave_or_wtddvoa',\n",
-       " 'rankings___h__off_rank',\n",
-       " 'rankings___h__defensedvoa',\n",
-       " 'rankings___v__estim_winrate',\n",
-       " 'rankings___h__estim_winrate',\n",
-       " 'rankings___h__s_t_rank',\n",
-       " 'rankings___v__s_t_rank',\n",
-       " 'rankings___h__offensedvoa',\n",
-       " 'rankings___h__dave_or_wtddvoa',\n",
-       " 'rankings___v__defensedvoa',\n",
-       " 'rankings___v__totaldvoa',\n",
-       " 'rankings___v__off_rank',\n",
-       " 'rankings___h__totaldvoa']"
+       "<filter at 0x10a0eba90>"
       ]
      },
      "execution_count": 8,
@@ -1729,8 +1607,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:44:40.808163Z",
-     "start_time": "2019-02-28T23:43:08.269740Z"
+     "end_time": "2019-05-30T02:09:53.177177Z",
+     "start_time": "2019-05-30T02:08:09.576583Z"
     },
     "scrolled": false
    },
@@ -1759,15 +1637,15 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:44:40.825261Z",
-     "start_time": "2019-02-28T23:44:40.812788Z"
+     "end_time": "2019-05-30T02:09:53.183278Z",
+     "start_time": "2019-05-30T02:09:53.178909Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'features.combined_0127'"
+       "'features.combined_0320'"
       ]
      },
      "execution_count": 10,
@@ -1777,7 +1655,7 @@
     {
      "data": {
       "text/plain": [
-       "'labels.combined_0127'"
+       "'labels.combined_0320'"
       ]
      },
      "execution_count": 10,
@@ -1792,17 +1670,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:47:38.738850Z",
-     "start_time": "2019-02-28T23:47:38.632592Z"
+     "end_time": "2019-05-30T02:09:53.370836Z",
+     "start_time": "2019-05-30T02:09:53.187243Z"
     }
    },
    "outputs": [],
    "source": [
     "labels = spark.table('labels.team_game_line_labels')\\\n",
-    "            .select('game_id','is_home','did_cover_sbr','did_win','week_id')\\\n",
+    "            .select('game_id','is_home','did_cover_sbr','did_win',\n",
+    "                    'week_id','season')\\\n",
     "            .filter(\n",
     "                (col('is_home') == 1)\n",
     "                & (col('did_cover_sbr') != 0)\n",
@@ -1813,11 +1692,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:47:45.591916Z",
-     "start_time": "2019-02-28T23:47:39.544729Z"
+     "end_time": "2019-05-30T02:10:01.650133Z",
+     "start_time": "2019-05-30T02:09:53.372401Z"
     }
    },
    "outputs": [],
@@ -1829,11 +1708,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:48:02.740241Z",
-     "start_time": "2019-02-28T23:48:01.314797Z"
+     "end_time": "2019-05-30T02:10:03.473097Z",
+     "start_time": "2019-05-30T02:10:01.651974Z"
     }
    },
    "outputs": [
@@ -1883,7 +1762,7 @@
        "1              1   1380"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1933,7 +1812,7 @@
        "1        1   1598"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,11 +1824,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-28T23:48:03.571185Z",
-     "start_time": "2019-02-28T23:48:02.744578Z"
+     "end_time": "2019-05-30T02:10:04.409142Z",
+     "start_time": "2019-05-30T02:10:03.476656Z"
     }
    },
    "outputs": [],
@@ -1967,21 +1846,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
