made python2 --> python3 changes

--- a/03_labels/form_visualize_labels.ipynb
+++ b/03_labels/form_visualize_labels.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:04.067416Z",
-     "start_time": "2019-01-25T05:07:58.242524Z"
+     "end_time": "2019-05-21T03:36:26.902952Z",
+     "start_time": "2019-05-21T03:36:19.249286Z"
     },
     "run_control": {
      "marked": true
@@ -49,8 +49,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:04.077463Z",
-     "start_time": "2019-01-25T05:08:04.072468Z"
+     "end_time": "2019-05-21T03:36:26.914770Z",
+     "start_time": "2019-05-21T03:36:26.908329Z"
     }
    },
    "outputs": [],
@@ -71,8 +71,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:04.184210Z",
-     "start_time": "2019-01-25T05:08:04.082905Z"
+     "end_time": "2019-05-21T03:36:26.999873Z",
+     "start_time": "2019-05-21T03:36:26.920388Z"
     }
    },
    "outputs": [],
@@ -188,8 +188,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:09.927212Z",
-     "start_time": "2019-01-25T05:08:04.189705Z"
+     "end_time": "2019-05-21T03:36:32.744587Z",
+     "start_time": "2019-05-21T03:36:27.005700Z"
     }
    },
    "outputs": [],
@@ -239,8 +239,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:10.172729Z",
-     "start_time": "2019-01-25T05:08:09.932620Z"
+     "end_time": "2019-05-21T03:36:33.059832Z",
+     "start_time": "2019-05-21T03:36:32.750500Z"
     }
    },
    "outputs": [
@@ -540,8 +540,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:10.967984Z",
-     "start_time": "2019-01-25T05:08:10.179879Z"
+     "end_time": "2019-05-21T03:36:33.765180Z",
+     "start_time": "2019-05-21T03:36:33.066196Z"
     }
    },
    "outputs": [],
@@ -571,8 +571,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:12.751726Z",
-     "start_time": "2019-01-25T05:08:10.974059Z"
+     "end_time": "2019-05-21T03:36:35.147264Z",
+     "start_time": "2019-05-21T03:36:33.771347Z"
     }
    },
    "outputs": [],
@@ -607,8 +607,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:24.353535Z",
-     "start_time": "2019-01-25T05:08:12.757525Z"
+     "end_time": "2019-05-21T03:36:50.461853Z",
+     "start_time": "2019-05-21T03:36:35.152994Z"
     },
     "scrolled": false
    },
@@ -724,8 +724,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:27.298484Z",
-     "start_time": "2019-01-25T05:08:24.359979Z"
+     "end_time": "2019-05-21T03:36:54.518041Z",
+     "start_time": "2019-05-21T03:36:50.468379Z"
     }
    },
    "outputs": [],
@@ -742,8 +742,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:27.357565Z",
-     "start_time": "2019-01-25T05:08:27.304426Z"
+     "end_time": "2019-05-21T03:36:54.596739Z",
+     "start_time": "2019-05-21T03:36:54.525039Z"
     }
    },
    "outputs": [
@@ -892,8 +892,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:27.956922Z",
-     "start_time": "2019-01-25T05:08:27.364468Z"
+     "end_time": "2019-05-21T03:36:55.266357Z",
+     "start_time": "2019-05-21T03:36:54.607691Z"
     }
    },
    "outputs": [
@@ -954,8 +954,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:28.029091Z",
-     "start_time": "2019-01-25T05:08:27.963576Z"
+     "end_time": "2019-05-21T03:36:55.340726Z",
+     "start_time": "2019-05-21T03:36:55.272164Z"
     }
    },
    "outputs": [],
@@ -980,8 +980,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:28.185710Z",
-     "start_time": "2019-01-25T05:08:28.035742Z"
+     "end_time": "2019-05-21T03:36:55.553170Z",
+     "start_time": "2019-05-21T03:36:55.350312Z"
     }
    },
    "outputs": [
@@ -1218,8 +1218,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:28.494725Z",
-     "start_time": "2019-01-25T05:08:28.192898Z"
+     "end_time": "2019-05-21T03:36:55.887677Z",
+     "start_time": "2019-05-21T03:36:55.560727Z"
     }
    },
    "outputs": [],
@@ -1257,8 +1257,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:29.954491Z",
-     "start_time": "2019-01-25T05:08:28.501356Z"
+     "end_time": "2019-05-21T03:36:57.106698Z",
+     "start_time": "2019-05-21T03:36:55.895316Z"
     },
     "run_control": {
      "marked": false
@@ -1350,8 +1350,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:32.086688Z",
-     "start_time": "2019-01-25T05:08:29.960820Z"
+     "end_time": "2019-05-21T03:36:58.920843Z",
+     "start_time": "2019-05-21T03:36:57.114355Z"
     }
    },
    "outputs": [],
@@ -1381,8 +1381,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:32.236493Z",
-     "start_time": "2019-01-25T05:08:32.092772Z"
+     "end_time": "2019-05-21T03:36:59.087321Z",
+     "start_time": "2019-05-21T03:36:58.929034Z"
     },
     "scrolled": true
    },
@@ -1396,8 +1396,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:34.211877Z",
-     "start_time": "2019-01-25T05:08:32.242589Z"
+     "end_time": "2019-05-21T03:37:01.407213Z",
+     "start_time": "2019-05-21T03:36:59.095425Z"
     }
    },
    "outputs": [
@@ -1467,8 +1467,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:08:46.476025Z",
-     "start_time": "2019-01-25T05:08:34.218038Z"
+     "end_time": "2019-05-21T03:37:17.297932Z",
+     "start_time": "2019-05-21T03:37:01.415180Z"
     }
    },
    "outputs": [
@@ -1556,8 +1556,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:11.661129Z",
-     "start_time": "2019-01-25T05:08:46.482316Z"
+     "end_time": "2019-05-21T03:38:36.908201Z",
+     "start_time": "2019-05-21T03:37:17.306678Z"
     },
     "scrolled": true
    },
@@ -1847,8 +1847,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:11.774358Z",
-     "start_time": "2019-01-25T05:09:11.665192Z"
+     "end_time": "2019-05-21T03:38:37.050487Z",
+     "start_time": "2019-05-21T03:38:36.915362Z"
     }
    },
    "outputs": [],
@@ -1878,8 +1878,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:12.077732Z",
-     "start_time": "2019-01-25T05:09:11.779136Z"
+     "end_time": "2019-05-21T03:38:37.299258Z",
+     "start_time": "2019-05-21T03:38:37.057130Z"
     }
    },
    "outputs": [
@@ -2087,8 +2087,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:13.178003Z",
-     "start_time": "2019-01-25T05:09:12.084964Z"
+     "end_time": "2019-05-21T03:38:38.722197Z",
+     "start_time": "2019-05-21T03:38:37.305569Z"
     }
    },
    "outputs": [
@@ -2164,8 +2164,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:17.231638Z",
-     "start_time": "2019-01-25T05:09:13.185030Z"
+     "end_time": "2019-05-21T03:38:44.015862Z",
+     "start_time": "2019-05-21T03:38:38.730732Z"
     }
    },
    "outputs": [],
@@ -2197,8 +2197,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:17.274318Z",
-     "start_time": "2019-01-25T05:09:17.237284Z"
+     "end_time": "2019-05-21T03:38:44.104757Z",
+     "start_time": "2019-05-21T03:38:44.024059Z"
     }
    },
    "outputs": [
@@ -2281,15 +2281,15 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:17.763269Z",
-     "start_time": "2019-01-25T05:09:17.280330Z"
+     "end_time": "2019-05-21T03:38:44.730144Z",
+     "start_time": "2019-05-21T03:38:44.115953Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a17a41f10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a25361b90>"
       ]
      },
      "execution_count": 26,
@@ -2336,8 +2336,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:17.940223Z",
-     "start_time": "2019-01-25T05:09:17.768333Z"
+     "end_time": "2019-05-21T03:38:45.121504Z",
+     "start_time": "2019-05-21T03:38:44.736666Z"
     }
    },
    "outputs": [
@@ -2407,8 +2407,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:48.034932Z",
-     "start_time": "2019-01-25T05:09:17.947253Z"
+     "end_time": "2019-05-21T03:39:23.476530Z",
+     "start_time": "2019-05-21T03:38:45.130711Z"
     },
     "scrolled": false
    },
@@ -2648,8 +2648,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:49.140324Z",
-     "start_time": "2019-01-25T05:09:48.039527Z"
+     "end_time": "2019-05-21T03:39:25.354636Z",
+     "start_time": "2019-05-21T03:39:23.482667Z"
     },
     "scrolled": false
    },
@@ -2893,7 +2893,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a17bbdcd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a264899d0>"
       ]
      },
      "execution_count": 29,
@@ -2903,7 +2903,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a17b15250>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2302ba50>"
       ]
      },
      "execution_count": 29,
@@ -2953,8 +2953,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-25T05:09:50.154231Z",
-     "start_time": "2019-01-25T05:09:49.145446Z"
+     "end_time": "2019-05-21T03:39:26.125624Z",
+     "start_time": "2019-05-21T03:39:25.360900Z"
     }
    },
    "outputs": [
@@ -3163,7 +3163,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a177e6390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a264a0410>"
       ]
      },
      "execution_count": 30,
@@ -3194,21 +3194,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
