notebooks for refactoring model pipeline

--- a/04_model_pipeline_dev/dev_train_score_evaluate_pipeline.ipynb
+++ b/04_model_pipeline_dev/dev_train_score_evaluate_pipeline.ipynb
@@ -865,7 +865,7 @@
     "    ## index\n",
     "    'game_id','team_id',\n",
     "    ## strata\n",
-    "    'is_home','is_fav_sbr',\n",
+    "    'is_home','is_fav_sbr','season'\n",
     "    ## labels\n",
     "    'did_win','final_margin','did_cover_pfr',\n",
     "    'did_cover_sbr','did_cover_sbr_open'\n",
@@ -874,7 +874,7 @@
     "assert features.count() == labels.count()\n",
     "\n",
     "features.write.mode('overwrite').saveAsTable('features.0109_test')\n",
-    "labels.write.mode('overwrite').saveAsTable('labels.0109_test')\n",
+    "labels.write.mode('overwrite').saveAsTable('labels.labels_0529')\n",
     "\n",
     "## OVER/UNDER\n",
     "features = spark.table('labels.over_under_labels').select(\n",
@@ -1779,7 +1779,7 @@
     "width": "165px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
