--- a/config/initialize.ipynb
+++ b/config/initialize.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-18T03:04:26.106883Z",
-     "start_time": "2019-01-18T03:04:25.976657Z"
+     "end_time": "2019-05-23T03:09:13.216047Z",
+     "start_time": "2019-05-23T03:09:11.871036Z"
     }
    },
    "outputs": [
@@ -28,16 +28,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -64,31 +54,32 @@
     "plt.style.use('fivethirtyeight')\n",
     "%matplotlib inline\n",
     "\n",
-    "spark.sql('USE football_games')\n",
     "os.chdir('/Users/joshplotkin/Dropbox/data_science/football_data')\n",
     "sys.path.append('../modeling-football-outcomes/config')\n",
     "\n",
-    "from mpl_style import *"
+    "from mpl_style import *\n",
+    "\n",
+    "spark.sql('USE football_games')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
