made python2 --> python3 changes

--- a/model_pipeline/generate_configs_execute.ipynb
+++ b/model_pipeline/generate_configs_execute.ipynb
@@ -590,7 +590,8 @@
     "    )) == 0\n",
     "    ## if holdout data isn't stored, it can't be scored\n",
     "    assert not (model_dict['holdout_set']['store_to_disk'] is False) \\\n",
-    "                & (model_dict['holdout_set']['score_using_full_model'] is True)"
+    "                & (model_dict['holdout_set']['score_using_full_model'] is True)\n",
+    "    "
    ]
   },
   {
@@ -1051,21 +1052,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
